@@ -26,6 +26,7 @@ Additions:
    * Add elm_dbus_menu to support D-Bus external menus.
    * Add configuration: ELM_EXTERNAL_MENU, to switch between internal and extenal menus
    * Add elm_systray.[ch]: Add support to D-Bus systray icons.
+   * Add elm_label_slide_mode_set(), elm_label_slide_mode_get()
 
 Improvements:
 
@@ -121,6 +122,7 @@ Removals:
    * All internal widget hooks (and related macros) were removed, due
      to deprecation. Thus, people using that (unstable) API will have
      to adapt themselves.
+   * Deprecate elm_label_slide_set(), elm_label_slide_get().
 
 Changes since Elementary 1.0.0:
 -------------------------
